--- a/Home_Cleaning-app/package.json
+++ b/Home_Cleaning-app/package.json
@@ -24,6 +24,7 @@
     "react-navigation": "^4.1.1",
     "react-navigation-header-buttons": "^3.0.5",
     "react-navigation-stack": "^2.1.1",
+    "react-navigation-tabs": "^2.7.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
